fix: correção de reticencia quando tem overflow no select

Merge aceito por: Ricardo B Oliveira <ricardo.batista-oliveira@serpro.gov.br>

Approved-by: Ricardo B Oliveira <ricardo.batista-oliveira@serpro.gov.br>

Merge Request govbr-ds/ds/dev/govbr-ds-dev-core!131

Closes govbr-ds/govbr-ds-backlogs#497

--- a/src/components/select/_mixins.scss
+++ b/src/components/select/_mixins.scss
@@ -11,8 +11,25 @@
 }
 
 @mixin select-tokens {
+  // }
   --select-divider: 1px solid var(--color-secondary-04);
   --select-shadow: var(--surface-shadow-md);
+  // .overflow-text {
+  .#{$prefix}input {
+    input {
+      padding-right: 29px;
+      text-overflow: ellipsis;
+
+      &::after {
+        background-color: white;
+        bottom: 0;
+        content: " mais texto";
+        padding: 0 5px;
+        position: absolute;
+        right: 0;
+      }
+    }
+  }
 }
 
 @mixin select-default {
